tests/syntax_error/missing_array_size_class.jou
class Thing:
    pass

def foo(things: Thing[]) -> int:  # Error: array length must be specified, e.g. int[10] instead of int[]
    pass
